# emph

./: README.md
project/: CMakeCache.txt  Makefile  cmake_install.cmake  project_MMOOMPH.cbp  project_MMOOMPH.layout
sources/: CMakeLists.txt  ODE_solver.hpp  SNAE_solver.hpp  SNAE_solver_tests.cpp  SNAE_solver_tests.hpp  boundary_value_problem.hpp  expand_function.cpp  expand_function.hpp  heat_equation_2d_solver.hpp  heat_equation_solver.hpp  main.cpp  matrix.cpp  matrix.hpp  matrix_tests.cpp  min_and_max_functions.cpp  min_and_max_functions.hpp  multisteps_methods.hpp  multisteps_methods_tests.cpp  multisteps_methods_tests.hpp  one_step_methods.hpp  one_step_methods_tests.cpp  ring_buffer.hpp  ring_buffer_tests.cpp  ring_buffer_tests.hpp  solution_t_concept.hpp  tests.hpp  vector.cpp  vector.hpp  vector_tests.cpp  vector_tests.hpp
sources/sources/: CMakeLists.txt  main.cpp  matrix.hpp  matrix_tests.cpp  matrix_tests.hpp  min_and_max_functions.cpp  min_and_max_functions.hpp  multisteps_methods.hpp  multisteps_methods_tests.cpp  multisteps_methods_tests.hpp  one_step_methods.hpp  one_step_methods_tests.cpp  one_step_methods_tests.hpp  ring_buffer.hpp  ring_buffer_tests.cpp  solution_t_concept.hpp  tests.hpp  vector.hpp  vector_tests.cpp
